@@ -27,6 +27,9 @@ Version 2.0
 
 - improved error reporting for undefined values by providing a position.
 
+- `filesizeformat` filter uses decimal prefixes now per default and can be
+  set to binary mode with the second parameter.
+
 Version 2.0rc1
 --------------
 (no codename, released on June 9th 2008)
